clusters/openshift/apps/media/karakeep/karakeep/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karakeep
  namespace: karakeep
  labels:
    external-dns: 'true'
  annotations:
    external-dns.alpha.kubernetes.io/target: apps.sno-ai-lab.vanillax.xyz
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway
    namespace: openshift-ingress
    sectionName: https
  hostnames:
  - karakeep.apps.sno-ai-lab.vanillax.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - group: ''
      kind: Service
      name: karakeep-web
      port: 3000
      weight: 1
